chapter11-a-real-app/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-svc
spec:
  type: LoadBalancer
  selector:
    app: hellok8s
  ports:
  - port: 80
    targetPort: 4567
