chapter11-a-real-app/simple-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellok8s-svc
spec:
  ports:
  - port: 4567
    protocol: TCP
  selector:
    app: hellok8s
